@@ -2,4 +2,5 @@ builtinmacrodir	= $(kde_datadir)/kig/builtin-macros
 builtinmacro_DATA = \
 	circle_by_center_and_line.kigt \
 	circle_by_point_and_segment.kigt \
-	segment_axis.kigt
+	segment_axis.kigt \
+	vector_difference.kigt
